feat(compiler): add concrete-sys rust bindings

--- a/.github/workflows/concrete_compiler_publish_docker_images.yml
+++ b/.github/workflows/concrete_compiler_publish_docker_images.yml
@@ -37,6 +37,7 @@ jobs:
           backend: aws
           profile: cpu-test
 
+  # Not sure what to do about this one...
   hpx-image:
     needs: [setup-instance]
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
