--- a/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
@@ -22,6 +22,9 @@ declare_mlir_python_extension(
   PRIVATE_LINK_LIBS
   ConcretelangSupport
   ConcretelangCommon
+  ConcretelangRuntime
+  ConcretelangClientLib
+  ConcretelangServerLib
   EMBED_CAPI_LINK_LIBS
   MLIRCAPIRegisterEverything)
 
