--- a/compilers/concrete-compiler/compiler/lib/ClientLib/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/ClientLib/CMakeLists.txt
@@ -6,10 +6,9 @@ add_mlir_library(
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/concretelang/ClientLib
   ${PROJECT_SOURCE_DIR}/include/concretelang/Common
+  ${CONCRETE_CPU_INCLUDE_DIR}
   LINK_LIBS
   ConcretelangCommon
   PUBLIC
-  concrete_cpu
+  rust_deps_bundle
   concrete-protocol)
-
-target_include_directories(ConcretelangClientLib PUBLIC ${CONCRETE_CPU_INCLUDE_DIR})
