--- a/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/ClientLib/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/ClientLib/CMakeLists.txt
@@ -4,4 +4,5 @@ add_dependencies(ConcretelangUnitTests ConcretelangClientlibTests)
 
 add_unittest(ConcretelangClientlibTests unit_tests_concretelang_clientlib CRT.cpp)
 
-target_link_libraries(unit_tests_concretelang_clientlib PRIVATE ConcretelangClientLib ConcretelangSupport)
+target_link_libraries(unit_tests_concretelang_clientlib PRIVATE ConcretelangCommon ConcretelangClientLib
+                                                                ConcretelangSupport)
