--- a/.github/workflows/concrete_compiler_test_cpu_distributed.yml
+++ b/.github/workflows/concrete_compiler_test_cpu_distributed.yml
@@ -66,8 +66,8 @@ jobs:
         run: |
           cd compilers/concrete-compiler/compiler
           rm -rf /shared/build
-          make HPX_DIR=/shared/hpx install-hpx-from-source
-          make HPX_DIR=/shared/hpx BUILD_DIR=/shared/build CCACHE=ON DATAFLOW_EXECUTION_ENABLED=ON BINDINGS_PYTHON_ENABLED=OFF build-end-to-end-tests
+          cargo install cxxbridge-cmd
+          make BUILD_DIR=/shared/build CCACHE=ON DATAFLOW_EXECUTION_ENABLED=ON BINDINGS_PYTHON_ENABLED=OFF build-end-to-end-tests
 
       - name: Run end-to-end distributed test
         run: |
