--- a/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
@@ -38,9 +38,9 @@ add_mlir_library(
   concrete_optimizer
   MLIRExecutionEngine
   ${LLVM_PTHREAD_LIB}
-  ConcretelangRuntime
-  ConcretelangClientLib
-  ConcretelangServerLib
+  concrete-protocol
+  capnp
+  kj
   TFHEDialectAnalysis
   ConcreteDialectAnalysis)
 
