--- a/compilers/concrete-compiler/compiler/src/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/src/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(
           SDFGDialect
           OptimizerDialect
           ConcretelangSupport
+          ConcretelangRuntime
           ConcretelangTransforms
           MLIRIR
           MLIRLLVMIRTransforms
