--- a/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Dialect/TFHE/Transforms/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Dialect/TFHE/Transforms/CMakeLists.txt
@@ -5,5 +5,14 @@ add_dependencies(ConcretelangUnitTests ConcretelangTFHETransformsTests)
 add_unittest(ConcretelangTFHETransformsTests unit_tests_concretelang_tfhe_transforms Parametrization.cpp)
 
 target_link_libraries(
-  unit_tests_concretelang_tfhe_transforms PRIVATE TFHEDialectTransforms MLIRParser MLIRExecutionEngine
-                                                  TFHEGlobalParametrization ConcretelangSupport)
+    unit_tests_concretelang_tfhe_transforms
+    PRIVATE
+    TFHEDialectTransforms
+    MLIRParser
+    MLIRExecutionEngine
+    TFHEGlobalParametrization
+    ConcretelangSupport
+    ConcretelangClientLib
+    ConcretelangServerLib
+    ConcretelangRuntime
+)
