--- a/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Encodings/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Encodings/CMakeLists.txt
@@ -4,8 +4,15 @@ add_dependencies(ConcretelangUnitTests EncodingsUnitTests)
 
 function(add_concretecompiler_lib_test test_name)
   add_unittest(EncodingsUnitTests ${test_name} ${ARGN})
-  target_link_libraries(${test_name} PRIVATE ConcretelangSupport)
-  target_link_libraries(${test_name} PRIVATE ConcretelangCommon)
+  target_link_libraries(
+    ${test_name}
+    PRIVATE
+    ConcretelangSupport
+    ConcretelangCommon
+    ConcretelangClientLib
+    ConcretelangServerLib
+    ConcretelangRuntime
+  )
   set_source_files_properties(${ARGN} PROPERTIES COMPILE_FLAGS "-fno-rtti")
 endfunction()
 
