--- a/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/TestLib/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/TestLib/CMakeLists.txt
@@ -4,7 +4,14 @@ add_dependencies(ConcretelangUnitTests ConcreteCompilerLibTests)
 
 function(add_concretecompiler_lib_test test_name)
   add_unittest(ConcreteCompilerLibTests ${test_name} ${ARGN})
-  target_link_libraries(${test_name} PRIVATE ConcretelangSupport)
+  target_link_libraries(
+    ${test_name}
+    PRIVATE
+    ConcretelangSupport
+    ConcretelangClientLib
+    ConcretelangServerLib
+    ConcretelangRuntime
+  )
   set_source_files_properties(${ARGN} PROPERTIES COMPILE_FLAGS "-fno-rtti")
 endfunction()
 
