fix(ci): adds trivy-ignore-file to ignore HEALTHCHECK and solves non-root issue

--- a/docker/Dockerfile.concrete-compiler-env
+++ b/docker/Dockerfile.concrete-compiler-env
@@ -1,11 +1,9 @@
 FROM quay.io/pypa/manylinux_2_28_x86_64:2024-02-08-a1b4ddc
 
 # epel-release is for install ccache
-RUN dnf clean all
-RUN dnf install -y epel-release && dnf clean all
-RUN dnf update -y
+RUN dnf clean all && dnf install -y epel-release && dnf clean all
 # hadolint ignore=DL3041
-RUN dnf install -y ninja-build hwloc-devel ccache ncurses-devel openssh-clients graphviz graphviz-devel && dnf clean all
+RUN dnf update -y && dnf install -y ninja-build hwloc-devel ccache ncurses-devel openssh-clients graphviz graphviz-devel && dnf clean all
 RUN mkdir -p ~/.ssh/ && ssh-keyscan -t ecdsa github.com >> ~/.ssh/known_hosts
 # Setup gcc-11 (required for cuda11.8)
 RUN dnf install -y gcc-toolset-11 && dnf clean all
@@ -20,6 +18,12 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH=/root/.cargo/bin:$PATH
 RUN rustup install nightly-2024-09-30
+# Add a non-root user and group
+RUN groupadd -g 10001 grp02 && \
+    useradd -u 10000 -g grp02 usr01 && \
+    mkdir -p /home/usr01 && chown -R usr01:grp02 /home/usr01 /boost_1_71_0 /workdir /build
+# Switch to the non-root user
+USER usr01:grp02
 # Install boost
 ADD https://boostorg.jfrog.io/artifactory/main/release/1.71.0/source/boost_1_71_0.tar.gz /boost_1_71_0.tar.gz
 RUN tar -xzvf /boost_1_71_0.tar.gz
