--- a/docker/Dockerfile.cuda-123-env
+++ b/docker/Dockerfile.cuda-123-env
@@ -10,6 +10,12 @@ RUN dnf update -y \
     && dnf -y module install nvidia-driver:latest-dkms \
     && dnf -y install cuda \
     && dnf clean all
+# Add a non-root user and group
+RUN groupadd -g 10001 grp02 && \
+    useradd -u 10000 -g grp02 usr01 && \
+    chown -R usr01:grp02 /usr/local/cuda-12.3
+# Switch to the non-root user
+USER usr01:grp02
 
 FROM scratch
 COPY --from=build /usr/local/cuda-12.3/ /usr/local/cuda-12.3/
