--- a/.github/workflows/concrete_compiler_test_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_cpu.yml
@@ -50,17 +50,23 @@ jobs:
           sudo apt install moreutils
           cd compilers/concrete-compiler/compiler
           ./scripts/format_cpp.sh
-      - name: Upload format diff
+      - name: Upload format_cpp_diff
         if: failure()
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         with:
-          name: format_diff
-          path: compilers/concrete-compiler/compiler/format_diff.patch
+          name: format_cpp_diff
+          path: compilers/concrete-compiler/compiler/format_cpp_diff.patch
       - name: Format with cmake-format (Cmake)
         run: |
           pip3 install cmakelang
           cd compilers/concrete-compiler/compiler
           ./scripts/format_cmake.sh
+      - name: Upload format_cmake_diff
+        if: failure()
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        with:
+          name: format_cmake_diff
+          path: compilers/concrete-compiler/compiler/format_cmake_diff.patch
       - name: Format with black (Python)
         run: |
           cd compilers/concrete-compiler/compiler
