feat(ci/tools): install capnp in docker image

--- a/docker/Dockerfile.concrete-compiler-env
+++ b/docker/Dockerfile.concrete-compiler-env
@@ -18,6 +18,18 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH=/root/.cargo/bin:$PATH
 RUN rustup install nightly-2024-09-30
+# Install Cap'n Proto
+ENV CAPNP_VERSION=1.1.0
+# hadolint ignore=DL3003
+RUN mkdir /capnproto && \
+    cd /capnproto && \
+    curl -O https://capnproto.org/capnproto-c++-${CAPNP_VERSION}.tar.gz && \
+    tar zxf capnproto-c++-${CAPNP_VERSION}.tar.gz && \
+    cd capnproto-c++-${CAPNP_VERSION} && \
+    ./configure && \
+    make -j6 check && \
+    make install && \
+    rm -rf /capnproto
 # Add a non-root user and group
 RUN groupadd -g 10001 grp02 && \
     useradd -u 10000 -g grp02 usr01 && \
