feat(compiler/backend): support tfhers int/uint of 2-16 bits

--- a/backends/concrete-cpu/implementation/cbindgen.toml
+++ b/backends/concrete-cpu/implementation/cbindgen.toml
@@ -123,7 +123,7 @@ extra_bindings = []
 
 
 [parse.expand]
-crates = []
+crates = ["concrete-cpu"]
 all_features = false
 default_features = true
 features = []
