fix(ci): use same distro(nightly) for clippy

--- a/.github/workflows/concrete_cpu_test.yml
+++ b/.github/workflows/concrete_cpu_test.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Lint
         run: |
           cd backends/concrete-cpu/implementation
-          cargo +stable clippy --all-targets
+          cargo clippy --all-targets
 
       - name: Tests
         run: |
