--- a/.github/workflows/concrete_compiler_test_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_cpu.yml
@@ -176,7 +176,7 @@ jobs:
             set -e
             cd /concrete/compilers/concrete-compiler/compiler
             mkdir -p /tmp/concrete_compiler/gpu_tests/
-            pip install pytest
+            pip install pytest jsonpickle
             sed "s/pytest/python -m pytest/g" -i Makefile
             make MINIMAL_TESTS=${{ env.MINIMAL_TESTS }} DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$PYTHON_EXEC BUILD_DIR=/build run-tests
       - name: Slack Notification
