--- a/compilers/concrete-compiler/compiler/Makefile
+++ b/compilers/concrete-compiler/compiler/Makefile
@@ -113,7 +113,7 @@ ifeq ($(BUILD_TYPE),Debug)
 	LIBOMP_LINK_TO_LIBSTDCXX_OPT=-DLIBOMP_USE_STDCPPLIB=ON
 endif
 
-all: concretecompiler runtime python-bindings build-tests build-benchmarks doc concrete-sys
+all: concretecompiler runtime python-bindings build-tests build-benchmarks doc concrete-rust
 
 # COMPILER #####################################################
 
@@ -130,7 +130,7 @@ $(BUILD_DIR)/configured.stamp:
 	-DCMAKE_BUILD_TYPE=$(BUILD_TYPE) \
 	-DLLVM_ENABLE_ASSERTIONS=ON \
 	-DLLVM_ENABLE_RTTI=ON \
-	-DLLVM_LINK_LLVM_DYLIB=ON \
+	-DLLVM_LINK_LLVM_DYLIB=OFF \
 	-DMLIR_ENABLE_BINDINGS_PYTHON=$(BINDINGS_PYTHON_ENABLED) \
 	-DCONCRETELANG_BINDINGS_PYTHON_ENABLED=$(BINDINGS_PYTHON_ENABLED) \
 	-DCONCRETELANG_DATAFLOW_EXECUTION_ENABLED=$(DATAFLOW_EXECUTION_ENABLED) \
@@ -173,8 +173,8 @@ clientlib: build-initialized
 serverlib: build-initialized
 	cmake --build $(BUILD_DIR) --target ConcretelangServerLib
 
-concrete-sys: build-initialized
-	cmake --build $(BUILD_DIR) --target ConcreteSys
+concrete-rust: build-initialized
+	cmake --build $(BUILD_DIR) --target ConcreteRust
 
 GITHUB_URL=https://api.github.com/repos/zama-ai/concrete-compiler-internal
 GITHUB_URL_LIST_ARTIFACTS="${GITHUB_URL}/actions/artifacts?name=${KEYSETCACHENAME}&per_page=1"
@@ -234,7 +234,7 @@ run-python-tests: python-bindings concretecompiler runtime
 
 ## rust-tests
 
-run-rust-tests: concrete-sys
+run-rust-tests: concrete-rust
 	$(eval _abs_build_dir = $(realpath $(BUILD_DIR)))
 	cd lib/Bindings/Rust && COMPILER_BUILD_DIRECTORY=$(_abs_build_dir) cargo test
 
