--- a/compilers/concrete-compiler/compiler/lib/Runtime/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Runtime/CMakeLists.txt
@@ -5,8 +5,6 @@ if(CONCRETELANG_CUDA_SUPPORT)
     ConcretelangRuntime SHARED
     utils.cpp
     context.cpp
-    simulation.cpp
-    wrappers.cpp
     DFRuntime.cpp
     key_manager.cpp
     GPUDFG.cpp
@@ -16,8 +14,6 @@ else()
     ConcretelangRuntime SHARED
     utils.cpp
     context.cpp
-    simulation.cpp
-    wrappers.cpp
     DFRuntime.cpp
     key_manager.cpp
     GPUDFG.cpp
@@ -59,15 +55,14 @@ target_include_directories(
 
 target_link_libraries(
   ConcretelangRuntime
-  PRIVATE rust_deps_bundle
-          concrete-protocol
-          pthread
+  PRIVATE pthread
           m
           dl
           $<TARGET_OBJECTS:mlir_c_runner_utils>
           $<TARGET_OBJECTS:mlir_float16_utils>
           $<TARGET_OBJECTS:MLIRSparseTensorRuntime>
-          ConcretelangCommon)
+          $<LINK_LIBRARY:WHOLE_ARCHIVE,ConcretelangCommon>
+)
 
 if(CONCRETELANG_CUDA_SUPPORT)
   install(TARGETS ConcretelangRuntime omp tfhe_cuda_backend EXPORT ConcretelangRuntime)
@@ -81,8 +76,6 @@ install(EXPORT ConcretelangRuntime DESTINATION "./")
 add_library(
   ConcretelangRuntimeStatic STATIC
   context.cpp
-  simulation.cpp
-  wrappers.cpp
   DFRuntime.cpp
   key_manager.cpp
   GPUDFG.cpp
