--- a/compilers/concrete-optimizer/concrete-optimizer-cpp/Cargo.toml
+++ b/compilers/concrete-optimizer/concrete-optimizer-cpp/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 cxx = "1"
 concrete-optimizer = { path = "../concrete-optimizer" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 cxx-build = "1"
